--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div class="navbar bg-base-100">
             <div class="navbar-start">
                 <div class="bg-[#B4F461] rounded-lg">
-                    <a class="btn btn-ghost text-xl">Blog</a>
+                    <a class="btn btn-ghost text-sm md:text-xl">Blog</a>
                 </div>
             </div>
             <div class="navbar-center flex gap-4">
                 <img src="assets/logo.png" alt="">
-                <h3 class="text-xl font-semibold">Donate Bangladesh</h3>
+                <h3 class="text-sm md:text-xl font-semibold">Donate Bangladesh</h3>
             </div>
             <div class="navbar-end flex gap-3">
                 <img src="assets/coin.png" alt="">
-                <p class="text-xl font-medium opacity-70">5500 <span>BDT</span></p>
+                <p id="balance" class="text-sm md:text-xl font-medium opacity-70">5500</p><span>BDT</span>
             </div>
         </div>
         <div class="mt-20 text-center space-x-4">
@@ -33,51 +33,61 @@
         </div>
     </header>
     <main class="">
-        <div class="p-8 flex gap-8">
-            <div class="w-8/12"><img src="assets/noakhali.png" alt=""></div>
-            <div class="w-10/12 space-y-4">
-                <div class="flex gap-2">
+        <!-- donate noakhali -->
+        <div class="p-8 flex flex-col md:flex-row gap-8 items-end">
+            <div class="md:w-8/12"><img src="assets/noakhali.png" alt=""></div>
+            <div class="md:w-10/12 space-y-7">
+                <div  class="flex gap-2">
                     <img src="assets/coin.png" alt="">
-                    <p>0 BDT</p>
+                    <p id="addDonate">0</p><span>BDT</span>
                 </div>
                 <h2 class="card-title text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
                 <p class="text-lg opacity-70"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                 <div class="card-actions">
-                    <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-2xl" />
-                    <button class="btn btn-primary w-full">Donate Now</button>
+                    <input id="input-amount" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-2xl" />
+                    <button id="btn-donate" class="btn bg-[#B4F461] rounded-lg w-full text-xl font-semibold">Donate Now</button>
+                    
                 </div>
             </div>
         </div>
-        <div class="p-8 flex gap-8 items-center">
-            <div class="w-8/12"><img src="assets/feni.png" alt=""></div>
-            <div class="w-10/12 space-y-4">
+        <!-- donate feni -->
+        <div class="p-8 flex flex-col md:flex-row gap-8 items-end">
+            <div class="md:w-8/12"><img src="assets/feni.png" alt=""></div>
+            <div class="md:w-10/12 space-y-7 ">
                 <div class="flex gap-2">
                     <img src="assets/coin.png" alt="">
                     <p>600 BDT</p>
                 </div>
                 <h2 class="card-title text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h2>
                 <p class="text-lg opacity-70"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
-                <div class="card-actions mt-2">
+                <div class="card-actions">
                     <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-2xl" />
-                    <button class="btn btn-primary w-full">Donate Now</button>
+                    <button class="btn bg-[#B4F461] rounded-lg w-full text-xl font-semibold">Donate Now</button>
                 </div>
             </div>
         </div>
-        <div class="p-8 flex gap-8 items-center">
-            <div class="w-8/12"><img src="assets/quota-protest.png" alt=""></div>
-            <div class="w-10/12 space-y-4">
+        <!-- quata movement -->
+        <div class="p-8 flex flex-col md:flex-row gap-8 items-end">
+            <div class="md:w-8/12"><img src="assets/quota-protest.png" alt=""></div>
+            <div class="md:w-10/12 space-y-7 ">
                 <div class="flex gap-2">
                     <img src="assets/coin.png" alt="">
                     <p>2400 BDT</p>
                 </div>
-                <h2 class="card-title text-xl font-bold">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
-                <div class="card-actions mt-2">
+                <h2 class="card-title text-xl font-bold">Aid for Injured in the Quota Movement</h2>
+                <p class="text-lg opacity-70">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+                <div class="card-actions">
                     <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-2xl" />
-                    <button class="btn btn-primary w-full">Donate Now</button>
+                    <button class="btn bg-[#B4F461] rounded-lg w-full text-xl font-semibold">Donate Now</button>
                 </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="text-center">
+        <small>@All Right Reserved fot Donate Bangladesh</small>
+    </footer>
+    <!-- js -->
+    <script src="js/donate.js"></script>
+    <script src="js/utilites.js"></script>
 </body>
 </html>
