--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="container mx-auto">
-    <header class="sticky top-0 z-50 bg-white">
+    <header class="sticky top-0 z-50 bg-white opacity-95">
         <div class="navbar bg-base-100">
             <div class="navbar-start">
                 <div class="bg-[#B4F461] rounded-lg">
