--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p id="balance" class="text-sm md:text-xl font-medium opacity-70">5500</p><span>BDT</span>
             </div>
         </div>
-        <div class="mt-20 text-center space-x-4">
+        <div class="mt-10 text-center space-x-4">
             <button id="btn-donation" class="btn btn-lg">Donation</button>
             <button id="btn-history" class="btn btn-lg">History</button>
         </div>
@@ -43,7 +43,7 @@
                         <img src="assets/coin.png" alt="">
                         <p id="addDonateNoakhali">0</p><span>BDT</span>
                     </div>
-                    <h2 class="card-title text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+                    <h2 id="title-noakhali" class="card-title text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
                     <p class="text-lg opacity-70"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                     <div class="card-actions">
                         <input id="input-amount-noakhali" type="text" placeholder="Donation Amount" class="input input-bordered w-full max-w-2xl" />
@@ -72,7 +72,7 @@
                         <img src="assets/coin.png" alt="">
                         <p id="addDonateFeni">600 BDT</p>
                     </div>
-                    <h2 class="card-title text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h2>
+                    <h2 id="title-feni" class="card-title text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h2>
                     <p class="text-lg opacity-70"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
                     <div class="card-actions">
                         <input id="input-amount-feni" type="text" placeholder="Donation Amount" class="input input-bordered w-full max-w-2xl" />
@@ -101,12 +101,12 @@
                         <img src="assets/coin.png" alt="">
                         <p id="addDonateQuota">2400 BDT</p>
                     </div>
-                    <h2 class="card-title text-xl font-bold">Aid for Injured in the Quota Movement</h2>
+                    <h2 id="title-quota" class="card-title text-xl font-bold">Aid for Injured in the Quota Movement</h2>
                     <p class="text-lg opacity-70">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
                     <div class="card-actions">
                         <input id="input-amount-quota" type="text" placeholder="Donation Amount" class="input input-bordered w-full max-w-2xl" />
                         <button id="btn-donate-quota" class="btn bg-[#B4F461] rounded-lg w-full text-xl font-semibold" >Donate Now</button>
-                        <dialog id="my_modal_2" class="modal">
+                        <dialog id="my_modal_3" class="modal">
                             <div class="modal-box flex flex-col justify-center items-center space-y-4">
                                 <h2 class="text-4xl font-bold">Congrates!</h2>
                                 <img src="assets/coin.png" alt="">
@@ -124,13 +124,10 @@
             </div>
         </div>
         <!-- history -->
-        <div id="history-form" class="hidden">
-            <h3>Hello history</h3>
+        <div id="history-form" class="hidden space-y-14 mt-16">
+            
         </div>
     </main>
-    <footer class="text-center">
-        <small>@All Right Reserved fot Donate Bangladesh</small>
-    </footer>
     <!-- js -->
     <script src="js/donate.js"></script>
     <script src="js/utilites.js"></script>
