--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="container mx-auto">
+<body class="container mx-auto lexend">
     <header class="sticky top-0 z-50 bg-white opacity-95">
         <div class="navbar bg-base-100">
             <div class="navbar-start">
-                <div class="bg-[#B4F461] rounded-lg">
+                <div id="blog" class="bg-[#B4F461] rounded-lg">
                     <a class="btn btn-ghost text-sm md:text-xl">Blog</a>
                 </div>
             </div>
@@ -132,5 +132,6 @@
     <script src="js/donate.js"></script>
     <script src="js/utilites.js"></script>
     <script src="js/features.js"></script>
+    <script src="js/blog.js"></script>
 </body>
 </html>
