--- a/blog.html
+++ b/blog.html
@@ -36,14 +36,14 @@
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the importance of donations?</div>
             <div class="collapse-content">
-                <p>Donations support charitable causes, provide relief in emergencies, and help fund community projects, education, and healthcare, creating a positive impact on society and those in need. People should donate some money for humanity</p>
+                <p>Donations support charitable causes, provide relief in emergencies, and help fund community projects, education, and healthcare, creating a positive impact on society and those in need.People should donate some money for humanity</p>
             </div>
         </div>
         <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-xl font-medium">Can small donations make a difference?</div>
             <div class="collapse-content">
-                <p>Yes, small donations collectively contribute significantly. Even modest contributions help organizations sustain their efforts and reach more people in need.</p>
+                <p>Yes, small donations collectively contribute significantly. Even modest contributions help organizations sustain their efforts and reach more people in need.People should donate some money for humanity</p>
             </div>
         </div>
         <div class="collapse collapse-plus bg-base-200">
